# PyTestRailReporter

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
src/pytestrailreporter/: __init__.py  config.py  plugin.py  result_sender.py  testrail_client.py
